--- a/app.css
+++ b/app.css
@@ -16,25 +16,26 @@ h1{
     padding-top: 20px;
     margin: 10px;
     padding-bottom:20px ;
+   
 }
 
 #sec {
-    width: 650px;
+    width: 60%;
     height: 500px;
-    background-color: rgb(16, 16, 41);
-    align-items: center;
+    
+    
     text-align: center;
-    margin-left: 300px;
-      
+     flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20%;
 }
-.p1{
-  float: left;
-  width: 50%;
-  
+.Backg{
+    background-color: rgb(70, 70, 197);
 }
-.p2{
-    float: right;
-    width: 50%;
+.a{
+  display: flex;
+  justify-content: space-between;
 }
 
 #text{
